--- a/ForPetesSake/ForPetesSake.vcxproj.filters
+++ b/ForPetesSake/ForPetesSake.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="SDLWrapper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LTexture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="configurations.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SDLWrapper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LTexture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
