--- a/ForPetesSake/ForPetesSake.vcxproj
+++ b/ForPetesSake/ForPetesSake.vcxproj
@@ -122,11 +122,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Character.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="LTexture.cpp" />
     <ClCompile Include="SDLWrapper.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Character.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="configurations.h" />
     <ClInclude Include="LTexture.h" />
     <ClInclude Include="SDLWrapper.h" />
