Code design changes, there is an Entity class for any visible object on the screen, and there is a Character class for any visible animate characteron the screen. Character inherits Entity. There is also a Texture class which is a wrapper around SDL's texture object. There is another class SpriteSheet which inherits Texture and is responsible to handle all the animations. Entity has a Texture obj, Character has a SpriteSheet obj. The problem now is that Character has both Texture and SpriteSheet as two seperate objects, which doesn't make any sense design wise, and practically the texture obj is not used in the Character objects. Need to find a way to have a Texture for Entities but SpriteSheets (and only SpriteSheet) for Character

--- a/ForPetesSake/ForPetesSake.vcxproj.filters
+++ b/ForPetesSake/ForPetesSake.vcxproj.filters
@@ -21,13 +21,16 @@
     <ClCompile Include="SDLWrapper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LTexture.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Entity.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Character.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SpriteSheet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -38,13 +41,16 @@
     <ClInclude Include="SDLWrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="LTexture.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Entity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Character.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SpriteSheet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
