--- a/ForPetesSake/ForPetesSake.vcxproj
+++ b/ForPetesSake/ForPetesSake.vcxproj
@@ -124,7 +124,8 @@
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Entity.cpp" />
-    <ClCompile Include="LTexture.cpp" />
+    <ClCompile Include="SpriteSheet.cpp" />
+    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="SDLWrapper.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
@@ -132,7 +133,8 @@
     <ClInclude Include="Character.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="configurations.h" />
-    <ClInclude Include="LTexture.h" />
+    <ClInclude Include="SpriteSheet.h" />
+    <ClInclude Include="Texture.h" />
     <ClInclude Include="SDLWrapper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
