--- a/ForPetesSake/ForPetesSake.vcxproj
+++ b/ForPetesSake/ForPetesSake.vcxproj
@@ -73,6 +73,10 @@
     <IncludePath>C:\Users\black\Desktop\Main\Projects\1D-Software\Libraries\SDL2-2.0.10-VC\include;C:\Users\black\Desktop\Main\Projects\1D-Software\Libraries\SDL2_image-2.0.5\include;$(IncludePath)</IncludePath>
     <LibraryPath>E:\BACKUP_01NOV2019\Main\Projects\1D-Software\Tools&amp;Utils\Libraries\SDL2-2.0.10-VC\lib\x86;C:\Users\black\Desktop\Main\Projects\1D-Software\Libraries\SDL2-2.0.10-VC\lib\x86;C:\Users\black\Desktop\Main\Projects\1D-Software\Libraries\SDL2_image-2.0.5\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>D:\Projects\1D-Software\Libraries\SDL2-2.0.10-VC\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Projects\1D-Software\Libraries\SDL2-2.0.10-VC\lib\x86;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -82,7 +86,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -92,6 +96,9 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
+    <Link>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -124,6 +131,8 @@
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Environment.cpp" />
+    <ClCompile Include="SplashScreen.cpp" />
     <ClCompile Include="SpriteSheet.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="SDLWrapper.cpp" />
@@ -133,9 +142,15 @@
     <ClInclude Include="Character.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="configurations.h" />
+    <ClInclude Include="Environment.h" />
+    <ClInclude Include="Source.h" />
+    <ClInclude Include="SplashScreen.h" />
     <ClInclude Include="SpriteSheet.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="SDLWrapper.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
